<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/trackinghead"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:paddingTop="6dip"
        android:paddingLeft="6dip"
        android:text="@string/tracking"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/carrierhead"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:paddingTop="6dip"
        android:paddingLeft="6dip"
        android:text="@string/carrier"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/senderhead"
        android:layout_width="0dp"
        android:text="@string/sender"
        android:layout_weight="1.5"
        android:layout_height="wrap_content"
        android:paddingTop="6dip"
        android:paddingLeft="6dip"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_gravity="center" />
    <TextView
        android:id="@+id/recipienthead"
        android:layout_width="0dp"
        android:layout_weight="1.5"
        android:layout_height="wrap_content"
        android:paddingTop="6dip"
        android:paddingLeft="6dip"
        android:text="@string/recipient"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_gravity="center" />
    <TextView
        android:id="@+id/numpackhead"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:paddingTop="6dip"
        android:paddingLeft="6dip"
        android:text="@string/pcs"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_gravity="center" />
    <TextView
        android:id="@+id/ponumhead"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:paddingTop="6dip"
        android:paddingLeft="6dip"
        android:text="@string/ponum"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_gravity="center" />
    <TextView
        android:id="@+id/signaturehead"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:paddingTop="6dip"
        android:paddingLeft="6dip"
        android:text="@string/signature"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_gravity="center" />
</LinearLayout>