<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_edit_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText android:id="@+id/inputNumpackages"
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/pcs"
            android:layout_margin="5dip"
            android:layout_marginBottom="15dip"
            android:ems="10"
            android:gravity="center" />

        <EditText android:id="@+id/inputTracking"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="@string/tracking"
            android:layout_margin="5dip"
            android:layout_marginBottom="15dip"
            android:singleLine="true"/>

        <Button android:id="@+id/btnScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan" />

        <Spinner android:id="@+id/inputCarrier"
            android:layout_width="0dp"
            android:layout_weight=".75"
            android:layout_height="wrap_content"
            android:entries="@array/carriers"
            android:gravity="end" />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText android:id="@+id/inputSender"
            android:hint="@string/sender"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:singleLine="true"/>

        <EditText android:id="@+id/inputRecipient"
            android:hint="@string/recipient"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginBottom="15dip"
            android:singleLine="true"/>

        <EditText android:id="@+id/inputPoNum"
            android:hint="@string/ponum"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:singleLine="true"
            android:inputType="number"/>
    </LinearLayout>

    <Button android:id="@+id/btnGetSignature"
        android:text="@string/get_signature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
    <FrameLayout
        android:id="@+id/signatureFrame"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableLayout
            android:layout_height="wrap_content"
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent">

            <TableRow android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:text="Your Name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:paddingLeft="10sp"
                    android:layout_gravity="right" />

                <AutoCompleteTextView
                    android:layout_height="wrap_content"
                    android:id="@+id/yourName"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:maxLength="30">
                </AutoCompleteTextView>

            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:text=""
                    android:maxLength="30"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content" />

                <TextView
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:text="Please Sign below ..."
                    android:maxLength="30"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content" />
            </TableRow>

        </TableLayout>
        <view
            android:layout_width="match_parent"
            android:layout_height="400dp"
            class="com.powereng.receiving.FingerPaintView"
            android:id="@+id/myPaintView" />
    </FrameLayout>


    <include layout="@layout/dialog_ok_cancel" />


</LinearLayout>