<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_edit_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/detailNumpackages"
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/pcs"
            android:layout_margin="5dip"
            android:layout_marginBottom="15dip"
            android:ems="10"
            android:gravity="center"
            android:enabled="false" />

        <TextView android:id="@+id/detailTracking"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="@string/tracking"
            android:layout_margin="5dip"
            android:layout_marginBottom="15dip"
            android:singleLine="true"
            android:enabled="false" />

        <TextView android:id="@+id/detailCarrier"
            android:layout_width="0dp"
            android:layout_weight=".75"
            android:layout_height="wrap_content"

            android:gravity="end" />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/detailSender"
            android:hint="@string/sender"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:singleLine="true"
            android:enabled="false" />

        <TextView android:id="@+id/detailRecipient"
            android:hint="@string/recipient"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginBottom="15dip"
            android:singleLine="true"
            android:enabled="false" />

        <TextView android:id="@+id/detailPoNum"
            android:hint="@string/ponum"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:singleLine="true"
            android:inputType="number"
            android:enabled="false" />
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/dividerHorizontal" />

    <LinearLayout
        android:id="@+id/signatureFrame"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:layout_height="wrap_content"
            android:id="@+id/yourName"
            android:layout_width="274dp"
            android:maxLength="30"
            android:autoText="false"
            android:hint="@string/recipient">
        </AutoCompleteTextView>

        <view
            android:layout_width="match_parent"
            android:layout_height="@dimen/sig_box_height"
            class="com.powereng.receiving.FingerPaintView"
            android:id="@+id/myPaintView" />

    </LinearLayout>



    <include layout="@layout/dialog_ok_cancel"/>



</LinearLayout>